[build-system]
requires = ["setuptools>=43.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "valimp"
description = "Validate and parse function inputs"
authors = [
  {email = "marcusaread.prog@proton.me"},
  {name = "Marcus Read"},
]
readme = "README.md"
license = {text = "MIT License"}
keywords = [
    "validation",
    "parsing",
    "validate",
    "parse",
    "coerce",
    "input",
    "function"
]
requires-python = "~=3.9"

classifiers = [
	"Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
	"Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "black",
    "flake8",
    "flake8-docstrings",
    "pytest",
]
dev = [
    "black",
    "flake8",
    "flake8-docstrings",
    "pytest",
    "mypy",
    "pip-tools",
    "pre-commit",
    "pylint",
]

[project.urls]
homepage = "https://github.com/maread99/valimp"
documentation = "https://github.com/maread99/valimp"
"Issue Tracker" = "https://github.com/maread99/valimp/issues"
"Source Code" = "https://github.com/maread99/valimp"

[tool.setuptools_scm]
write_to = "src/valimp/_version.py"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
